# crumbs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  crumbs.base  deny.toml  index.csv  justfile  status.md
.crumbs/: add-a-userename-field-to-include-in-updates.md  add-an-append-command.md  add-description-flag-to-create-command.md  add-due-dependencies-blocks-blocked-by-to-reindex-csv.md  add-milestone-phase-field-for-roadmap-grouping.md  add-opened-clsoed-dates-to-table.md  add-option-to-list-crumbs-of-a-certain-type.md  add-phase-column-to-gui-item-table.md  add-pr-commit-field-for-linking-closed-crumbs-to-their-resol.md  add-shell-completions.md  add-skip-serializing-if-to-closed-reason-field.md  add-version-flag-to-cli.md  ask-for-confirmation-in-the-gui-when-deleting-crumbs.md  branch-independent-crumbs-persistence.md  central-list-of-prefixes.md  cli-add-clap-valueenum-to-sortkey-for-shell-completions.md  cli-and-semantics-for-tag-filter-currently-unclear-or.md  cli-append-to-item-body-without-opening-editor.md  cli-batch-create-from-file-or-stdin.md  cli-bulk-operations-on-filtered-items.md  cli-crumbs-create-title.md  cli-defer-with-an-until-date.md  cli-duplicate-an-item.md  cli-list-pad-phase-badge-to-widest-phase-for-column-alignmen.md  cli-list-show-phase-as-inline-badge-between-priority-and-typ.md  cli-message-starting-with-crashes-create.md  cli-moving-crumbs-from-global-to-another-directory-doesn-t-a.md  cli-search-add-priority-phase-type-badges-to-search-output.md  cli-sort-list.md  cli-story-points-on-create.md  cli-verbose-list-with-body-snippets.md  config.toml  consider-adding-a-tui-editor-to-the-cli-version.md  consider-adding-story-points-to-crumbs-for-planning.md  consider-removing-blocked-by-or-depends-they-express-the-sam.md  consider-the-option-to-add-emoji-to-the-body-of-a-crumb-mayb.md  creating-a-new-crumb-in-the-gui-should-take-me-to-it.md  creation-response-message-enhancement.md  crumbs-close-prompt-for-reason-if-not-supplied.md  crumbs-import-from-json-toon-csv.md  (+101 more)
.github/: dependabot.yml
crumbs/: Cargo.toml
crumbs-gui/: codemirror-entry.js  eslint.config.js  index.html  main.js  package-lock.json  package.json  style.css
crumbs-gui/src-tauri/: Cargo.toml  tauri.conf.json
crumbs-gui/src-tauri/capabilities/: default.json
crumbs-gui/src-tauri/icons/: Icon.icns  crumbs-icon.py
crumbs-gui/src-tauri/src/: commands.rs  main.rs
crumbs/src/: color.rs  config.rs  emoji.rs  id.rs  item.rs  lib.rs  main.rs  store.rs  store_config.rs
crumbs/src/commands/: batch_create.rs  block.rs  body.rs  clean.rs  close.rs  create.rs  defer.rs  delete.rs  edit.rs  export.rs  file_import.rs  filter.rs  init.rs  link.rs  list.rs  mod.rs  move_.rs  next.rs  reindex.rs  row.rs  search.rs  show.rs  start.rs  stats.rs  stop.rs  update.rs
crumbs/tests/: commands.rs
(+32 files in other folders)
