[package]
name = "crumbs"
version = "0.1.8"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dialoguer = "0.11"
dirs = "6"
csv = "1.4.0"
rand = "0.10.0"
serde_yaml = "0.9.34"
slugify = "0.1.0"
toml = "0.8"

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.clap]
features = ["cargo", "derive", "env", "wrap_help"]
version = "4.5.60"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dev-dependencies]
tempfile = "3"
