[package]
name = "crumbs"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dialoguer = "0.12"
dirs = "6"
csv = "1.4.0"
rand = "0.10.0"
serde_yml = "0.0.12"
console = "0.15"
slugify = "0.1.0"
toml = "1"

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.clap]
features = ["cargo", "derive", "env", "wrap_help"]
version = "4.5.60"

[dependencies.clap_complete]
version = "4"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dev-dependencies]
tempfile = "3"
