[package]
name = "crumbs"
version = "0.16.4"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29"
ratatui-core = "0.1"
ratatui-crossterm = "0.1"
ratatui-widgets = "0.3"
ratatui-textarea = { version = "0.8", features = ["crossterm"] }
emojis = "0.8"
dialoguer = "0.12"
dirs = "6"
csv = "1.4.0"
rand = "0.10.0"
tempfile = "3"
serde_json = "1"
serde_toon_format = "0.1.2"
console = "0.16"
shell-words = "1"
slugify = "0.1.0"
toml = "1"
serde_yaml_ng = "0.10.0"

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.clap]
features = ["cargo", "derive", "env", "wrap_help"]
version = "4.5.60"

[dependencies.clap_complete]
version = "4"

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

[dev-dependencies]
tempfile = "3"
