[package]
name = "crumbs-gui"
version = "0.14.4"
edition = "2024"

[dependencies]
crumbs = { path = "../../crumbs" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
